--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -1,100 +1,35 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>ДЕТАЛИ О КУРСЕ</title>
 
-    <!-- Bootstrap -->
-    <!--<link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">-->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body class="area">
+{% block title %}Details about course{% endblock title %}
+
+
+{% block nav_student %}{% endblock nav_student %}
+
+
+{% block url_student %}{% url 'students:list_view' %}{{id_c}}{% endblock url_student %}
    
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-      <!-- <a class="navbar-brand" href="#">PyBursa</a>-->
-    <!-- <div class="navbar-brand" >Bursa
-</div>-->
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-       
-        <li><a href="{% url 'index' %}">Main</a></li>
-        <li><a href="{% url 'contact' %}">Contacts</a></li>
-     	<li><a href="{% url 'students:list_view' %}{{id_c}}">Students</a></li>
-       
-      </ul>
-       
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+   
+{% block content %}
 
 <div class="center bold page-header">
-  <h1>Язык программирования для души</h1>
+  <h1>Преподаватели курса</h1>
 </div>
-<div class="center bold page-header">
-  <h4>Преподвавтели курса</h4>
-</div>
- <div class="panel panel-primary transparant-background">
-          <div class="panel-heading">
-            Учитель курса
-          </div>
-          <div class="panel-body">
-            <p><a href="{% url 'coaches:detail' course.coach.id %}">{{course.coach}}</a></p>
-            <p>{{course.coach.description}}</p>
-          </div>
-        </div>
- </div>
- <div class="panel panel-primary transparant-background">
-          <div class="panel-heading">
-           Ассистент курса
-          </div>
-          <div class="panel-body">
-            <p><a href="{% url 'coaches:detail' course.assistant.id %}">{{course.assistant}}</a></p>
-            <p>{{course.assistant.description}}</p>
-          </div>
-        </div>
 
+{% include "include/inc_inctructor.html" with block_title="Учитель курса" instructor=course.coach %}
+{% include "include/inc_inctructor.html" with block_title="Ассистент курса" instructor=course.assistant %}
 
-<!-- Table class="table align-justify"-->
-  <table  class="jewel" border="1" cellpadding="10" >
-<tr>
- <th>№</th><th>Тема</th><th>Описание</th>
-</tr> 
+<table  class="jewel" border="1" cellpadding="10" >
+  <tr>
+    <th>№</th><th>Тема</th><th>Описание</th>
+  </tr> 
 
 {% for i in name_lesson %}
-<tr>
-<td>{{forloop.counter}}</td><td>{{i}}</a></td><td>{{i.description}}</td>
-</tr>
-
+  <tr>
+    <td>{{forloop.counter}}</td><td>{{i}}</a></td><td>{{i.description|truncatechars:32}}</td>
+  </tr>
 {% endfor %}
-  </table>    
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <!--<script src="../static/js/bootstrap.min.js"></script>-->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-	</body>
-</html>
+</table>    
+{% endblock content %}
+    
