--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -1,98 +1,53 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Student's card</title>
 
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body class="area">
-  	<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <!--<a class="navbar-brand" href="#">PyBursa</a>-->
-      <!--<div class="nav navbar-nav">Bursa
-			</div>-->
+{% block title %}Details about student{% endblock title %}
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="{% url 'index' %}">Main</a></li>
-        <li><a href="{% url 'contact' %}">Contacts</a></li>
-        <li><a href="{% url 'students:list_view' %}">Students</a></li>
-      
-      </ul>
-     
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-	</nav>
-	<nav>
-  	<ul class=" color pager">
+
+{% block nav_student %}{% endblock nav_student %}
+
+
+{% block url_student %}{% url 'students:list_view' %}{{id_c}}{% endblock url_student %}
+   
+   
+{% block content %}
+<nav>
+  <ul class=" color pager">
     <li><a href="{% url 'students:list_view' %}">Previous</a></li>
-  	
-    </ul>
+  </ul>
 </nav>
 <div class="center">
-<h1>{{name_student}} {{name_student.surname}}</h1> </div>
-<!-- Table class="table align-justify "-->
-<table class="table-color" border="1" cellpadding="10">
+	<h1>{{name_student}} {{name_student.surname}}</h1>
+</div>
 
-
-<tr > 
-<td class="bold">дата рождения</a></td>
-<td>{{name_student.date_of_birth|date:"N d, Y"}}</td>
-</tr>
-<tr > 
-<td class="bold">адрес</a></td>
-<td>{{name_student.address}}</td>
-</tr>
-<tr > 
-<td class="bold">почта</a></td>
-<td>{{name_student.email}}</td>
-</tr>
-<tr > 
-<td class="bold">логин Skype</a></td>
-<td>{{name_student.skype}}</td>
-</tr>
-<tr > 
-<td class="bold">телефон</a></td>
-<td>{{name_student.phone}}</td>
-</tr>
+<table class="width table-color" border="1">
+	<tr> 
+		<td class="bold">дата рождения</a></td>
+		<td>{{name_student.date_of_birth|date:"N d, Y"}}</td>
+	</tr>
+	<tr> 
+		<td class="bold">адрес</a></td>
+		<td>{{name_student.address}}</td>
+	</tr>
+	<tr> 
+		<td class="bold">почта</a></td>
+		<td>{{name_student.email}}</td>
+	</tr>
+	<tr> 
+		<td class="bold">логин Skype</a></td>
+		<td>{{name_student.skype}}</td>
+	</tr>
+	<tr> 
+		<td class="bold">телефон</a></td>
+		<td>{{name_student.phone}}</td>
+	</tr>
 {% for course in name_student.courses.all %}
-<tr > 
-<td class="bold">курсы</a></td>
-
-<td>{{course}}</td>
-
-</tr>
+	<tr> 
+		<td class="bold">курсы</a></td>
+		<td><a href="{% url 'courses:detail' course.id %}">{{course}}</a></td>
+	</tr>
 {% endfor %}
-  </table>    
+</table>    
+{% endblock content %}
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-   <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
