--- a/templates/index.html
+++ b/templates/index.html
@@ -1,95 +1,32 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Hello, Python</title>
 
-    <!-- Bootstrap -->
-    <!--<link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">--> 
-    <!--<link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href=static/css/style.css" rel="stylesheet">-->
-    
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    
-    
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body >
-   
-	<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <!--<a class="navbar-brand" href="#">PyBursa</a>-->
-      <!--<div class="nav navbar-nav">Bursa
-			</div>-->
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-       	<!--<li class="active"><a href="index.html">Main</a></li>
-        <li><a href="contact.html">Contacts</a></li>
-        <li><a href="student_list.html">Students</a></li>-->
-        <li class="active"><a href="{% url 'index' %}">Main</a></li>
-        <li><a href="{% url 'contact' %}">Contacts</a></li>
-        <!--<li><a href="{% url 'student_list' %}">Students</a></li>--> 
-        <li><a href="{% url 'students:list_view' %}">Students</a></li>
-      
-      </ul>
-     
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-	</nav>
+{% block title %}Welcome to PyBursa{% endblock title %}
 
+
+{% block nav_index %}active{% endblock nav_index %}
+
+
+{% block url_student %}{% url 'students:list_view' %}{% endblock url_student %}
+
+
+{% block content %}
 <div class="container">
-<div class="panel-color jumbotron">
-<p> PyBursa</p>
- <h2>Description</h2>
+<div class="jumbotron">
+<h2>PyBursa</h2>
+<h4>Description</h4>
   <p class="justify">Python is an interpreted, object-oriented, high-level programming language with dynamic semantics. Its high-level built in data structures, combined with dynamic typing and dynamic binding, make it very attractive for Rapid Application Development, as well as for use as a scripting or glue language to connect existing components together. </p>
   <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>-->
 </div>
 </div>
 
-<!--<div class="center" class="page-header" >
-  <h1  >Program</h1>
-
-	<div class="alert alert-success" role="alert">PYTHON</div>
-	<div class="alert alert-info" role="alert">GIT</div>
-	<div class="alert alert-warning" role="alert">HTML</div>
-	<div class="alert alert-danger" role="alert">CSS</div>
-</div>-->
 <table class="jewel" border="1" cellpadding="10">
 <tr>
  <th>Курс</th><th>Описание</th>
 {% for i in name_course %}
-<tr><td><a href="{% url 'courses:detail' i.id %}">{{i}}</a></td><td>{{i.description}} </td></tr>
+<tr><td><a href="{% url 'courses:detail' i.id %}">{{i|upper}}</a></td><td>{{i.description|title}} </td></tr>
 {% endfor %}
 </tr>
 </table>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <!-- <script src="../static/js/bootstrap.min.js"></script>-->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
