--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,52 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>HyperContact</title>
+{% extends "base.html" %}
 
-    <!-- Bootstrap -->
-    {% load static from staticfiles %}
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+{% block title %}PyBursa - Контакты{% endblock title %}
+
+
+{% block nav_class_contacts %}active{% endblock nav_class_contacts %}
+
+
+{% block content %}
+
+
+{% load static from staticfiles %}
+    
+
+{% include "include/inc_contacts.html" with class="dir" position="director" name="Татьяна Орехова" skype="Tatyana_Oriekhova" email="to096540848@gmail.com" phone="+38 099 186 64 75" %}
+
+
+{% include "include/inc_contacts.html" with class="manag" position="manager" name="Дария Михалевич" skype="darka.darka.darka.darka." email="daria.mykhalevych@gmail.com" phone="+38 096 469 15 57" %}
+
+
+{% include "include/inc_contacts.html" with class="found" position="founder" name="Павел Обод" skype="azaless" email="itbursa100@gmail.com" phone="+38 099 173 67 43" %}
+
 
     
-  </head>
-  <body>
-    <ul class="nav nav-tabs">
-      <li role="presentation" class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-      <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
-      <li role="presentation"><a href="{% url 'students:list_view' %}">Students</a></li>
-    </ul>
-    <h3 class="dir">Director</h3>
-    <div class="bs-example" id="director">
-      <ul class="list-group">
-        <li class="list-group-item">Name: <span class="spn">Татьяна Орехова</span></li>
-        <li class="list-group-item">Skype: <span class="spn">Tatyana_Oriekhova</span> </li>
-        <li class="list-group-item">Email: <span class="label label-default">to096540848@gmail.com</span></li>
-        <li class="list-group-item">Phone: <span class="label label-info">+38 099 186 64 75</span></li>
-      </ul>
-    </div>
-    <h3 class="manag">Manager</h3>
-    <div class="bs-example" id="manager">
-      <ul class="list-group">
-        <li class="list-group-item">Name: <span class="spn">Дария Михалевич</span></li>
-        <li class="list-group-item">Skype: <span class="spn">darka.darka.darka.darka.</span></li>
-        <li class="list-group-item">Email: <span class="label label-default">daria.mykhalevych@gmail.com</span></li>
-        <li class="list-group-item">Phone: <span class="label label-info">+38 096 469 15 57</span> </li>
-      </ul>
-    </div>    
-    <h3 class="found">Founder</h3>
-    <div class="bs-example" id="founder">
-      <ul class="list-group">
-        <li class="list-group-item">Name: <span class="spn">Павел Обод</span></li>
-        <li class="list-group-item">Skype: <span class="spn">azaless</span></li>
-        <li class="list-group-item">Email: <span class="label label-default">itbursa100@gmail.com</span></li>
-        <li class="list-group-item">Phone: <span class="label label-info">+38 099 173 67 43</span></li>
-      </ul>
-    </div>
+   
+    
+   
     <div class="secret-zoo">
       <div class="container">
         <button type="button" class="btn btn-default" aria-label="Left Align">
@@ -111,10 +90,4 @@
         </button>
       </div>
     </div>         
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}    
