--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -11,7 +11,7 @@ html {
     
 }
 body {
-    background-image: url(../images/b7.png);
+    background-image: url(../images/бэк8.jpg);
     background-image: white;
     background-position:center;
     background-repeat: 50% 0 no-repeat;
@@ -2332,6 +2332,7 @@ th {
 .table-hover > tbody > tr:hover {
   background-color: #f5f5f5;
   margin:left;
+border-color:white;
 }
 table col[class*="col-"] {
   position: static;
@@ -4663,6 +4664,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   background-color: #290701;
   border-color: #908B8A;
   border-radius: 20px;
+  text-color:white;
 }
 .navbar-inverse .navbar-text {
   color: #9d9d9d;
