--- a/templates/index.html
+++ b/templates/index.html
@@ -1,56 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ooniversity</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-+   <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <hr class="topping_index"></hr>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <ul class="navbar-brand">
-            <a href="{% url 'index' %}">Главная</a>
-          	<a href="{% url 'contact' %}">Контакты</a>
-          	<a href="{% url 'students:list_view' %}">Студенты</a>
-          </ul>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        </div>
-      </div>
-    </nav>
-    <div class="jumbotron">
-      <div class="container">
-	      <div class="bursa">
-          <h1 id="pb" class="bursa"><b>IT Bursa<b></h1>
-            <p class="descr"><b>Курсы ItBursa начали работу в 2014 году. Мы специализируемся на «модных» языках программирования. Принципиальное наше отличие от других курсов – максимум практики и жесткая система обязательных домашних заданий. Преподаватели – опытные практикующие разработчики, они помогают участникам в ходе курсов создать реальные проекты и получить практические навыки, применимые к работе. Домашние задания на наших курсах обязательны и их невыполнение приводит к исключению с курсов. Таким образом, мы готовим не просто «слушателей» курсов, а настоящих специалистов, способных создавать пусть простые, но рабочие проекты.
-         </b></p>
-        </div>
+{% extends "base.html" %}
+
+{% load staticfiles %}
+
+
+{% block title %}<title>ooniversity</title>{% endblock %}
+
+
+{% block nav_brand_index %}active{% endblock %}
+
+
+{% block students %}<li class="{% block nav_brand_students %}{% endblock %}"><a href="{% url 'students:list_view' %}">Студенты</a></li>{% endblock %}
+
+
+{% block content %}
+  <div class="jumbotron">
+    <div class="container">
+	    <div class="bursa">
+        <h1 class="itbursa" ><b>IT Bursa<b></h1>
+          <div class="index-logo">
+            <img class="logo-itbursa" src="{% static 'images/logo itbursa.png' %}" alt="...">
+          </div>
+          <p class="descr"><b>Курсы ItBursa начали работу в 2014 году. Мы специализируемся на «модных» языках программирования. Принципиальное наше отличие от других курсов – максимум практики и жесткая система обязательных домашних заданий. Преподаватели – опытные практикующие разработчики, они помогают участникам в ходе курсов создать реальные проекты и получить практические навыки, применимые к работе. Домашние задания на наших курсах обязательны и их невыполнение приводит к исключению с курсов. Таким образом, мы готовим не просто «слушателей» курсов, а настоящих специалистов, способных создавать пусть простые, но рабочие проекты.
+           </b></p>
       </div>
     </div>
-    <div class="study_table">
-      <div class="panel panel-default">
-        <div class="panel-heading"><h2 class="py_program">Запишись на курсы Попади в тренд современной WEB разработки</h2></div>      
-          <table class="table table-hover">
-            <tr class="course_table"><td><h3><b>Курс</b></h3></td><td><h3><b>Тема</b></h3></td><tr>
-            {% for course in courses %}
-            <tr><td><a href="{% url 'courses:detail' course.id %}"><h3 class="course"><b>{{ course }}</b></h3></a></td><td><h3><b>{{ course.short_description }}</b></h3></td></tr>
-            {% endfor %}
-          </table>
-        </div>
+  </div>
+  <div class="study_table">
+    <div class="panel panel-default">
+      <div class="panel-heading"><h2 class="py_program">Запишись на курсы, попади в тренд современной WEB разработки</h2></div>      
+        <table class="table table-hover">
+          <tr class="course_table"><td><h3><b>курс</b></h3></td><td><h3><b>тема</b></h3></td><tr>
+          {% for course in courses %}
+          <tr><td><a href="{% url 'courses:detail' course.id %}"><h3 class="course"><b>{{ course|upper }}</b></h3></a></td><td><h3><b> {{ course.short_description|title }}</b></h3></td></tr>
+          {% endfor %}
+        </table>
       </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  </body>
-</html>
+    </div>
+    {% endblock content %}
