--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,51 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Students in ITBursa</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-+   <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <script src="{% static 'js/bootstrap.js'%}"></script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <hr class="topping_students"></hr>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <ul class="navbar-brand">
-          	<a href="{% url 'index' %}">Главная</a>
-          	<a href="{% url 'contact' %}">Контакты</a>
-          	<a href="{% url 'students:list_view' %}">Студенты</a>
-          </ul>
-    	    </div>
-    	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    	  </div>
-      </div>
-    </nav>
-  	<div class="page-header">
-      <h1 class="student-head">Студенты ITBursa</h1>
-        <p class="below-header">Список студентов учащихся в ooniversity</p>
-  	</div>
-		<div class="study_table2">
-		  <div class="panel panel-default">
-  	    <div class="panel-heading"><h2 class="course_program" >Курс 2015</h2></div>
-		      <table class="table table-hover">
-  		      <tr class="headtable_student"><td><h3>No</h3></td><td><h3>Фамилия Имя</h3></td><td><h3>Адрес</h3></td><td><h3>Skype</h3></  td><td><h3>Курсы</h3></td><tr>            
-            {% for student in students_on_course %}
-            <tr ><td><h3>{{student.id}}</h3></td><td><h3><a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{ student.name}}</a></h3></td><td><h3>{{student.address}}</h3></td><td><h3>{{student.skype}}</h3></td><td><h3>{% for course in student.courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}{% endfor %}</a></h3></td></tr>
+{% extends "base.html" %}
+
+{% load staticfiles %}
+
+
+{% block title %}<title>ooniversity-students_list</title>{% endblock %}
+
+
+{% block students %}<li class="{% block nav_brand_students %}active{% endblock %}"><a href="{% url 'students:list_view' %}">Студенты</a></li>{% endblock %}
+
+
+{% block content %}
+  <div class="page-header">
+    <h1 class="student-head">Студенты ITBursa</h1>
+      <p class="below-header">Список студентов учащихся в ooniversity</p>
+  </div>
+  <div class="study_table2">
+	  <div class="panel panel-default">
+  	  <div class="panel-heading"><h2 class="course_program" >курс 2015</h2></div>
+		    <table class="table table-hover">
+  		    <tr class="headtable_student"><td><h3>No</h3></td><td><h3>фамилия Имя</h3></td><td><h3>адрес</h3></td><td><h3>skype</h3></   td><td><h3>курсы</h3></td><tr>
+            {% for student in students_on_course %}            
+          <tr ><td><h3>{{student.id}}</h3></td><td><h3><a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{ student.name }}</a></h3></td><td><h3>{{student.address}}</h3></td><td><h3>{{ student.skype }}</h3></td><td><h3>{% for course in student.courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}{% endfor %}</a></h3></td></tr>
             {% endfor %}   
-			    </table>
-        </div>
+			  </table>
       </div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  </body>
-</html>
+    </div>
+{% endblock content %}
