--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,33 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-	{% load staticfiles %}
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-		<link href="{% static 'css/style.css' %}" rel="stylesheet">
+{% extends "base_template.html" %}
 
-    <title>List</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
-   
-  </head>
-	<body>
-		<div class="container">
-			<div class="navbar">
-				<div class="navbar-inner">
-		      <ul class="nav nav-pills">
-						<li><a href="{% url 'index' %}">Главная</a></li>
-						<li><a href="{% url 'contact' %}">Контакты</a></li>
-						<li><a href="{% url 'students:list_view' %}">Студенты</a></li>
-					</ul>
-				</div>	
-			<div>
-		</div>
+{% load staticfiles %}
+
+
+{% block title_name %}Student list{% endblock title_name %}
+
+
+{% block active_students %}active{% endblock active_students %}
+
+
+{% block content %}
 		<div class="container">
 			<div class="page-header">
 				<h1>Список студентов</h1>
@@ -63,13 +46,5 @@
 				</div>
 			</div>
 		</div>
-		<script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="{% static 'js/vendor/holder.min.js' %}"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
-  
-	</body>
-</html>
+{% endblock content %}
 		
