new mode for kz 7_1

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 
-{% block title %}<title>ooniversity-contacts</title>{% endblock %}
+{% block title %}<title>ooniversity-contact</title>{% endblock %}
 
 
 {% block nav_brand_contacts %}active{% endblock %}
