--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 
-{% block title %}<title>ooniversity-courses_detail</title>{% endblock %}
+{% block title %}<title>ooniversity-courses_details</title>{% endblock %}
 
 
 {% block nav_brand_index %}active{% endblock %}
@@ -25,10 +25,10 @@
   </div>
 
 
-{% include "courses/include.html" with head="учитель" teacher=courses.coach %}
+{% include "../../courses/templates/include/include.html" with head="учитель" teacher=courses.coach %}
 
 
-{% include "courses/include.html" with head="ассистент" teacher=courses.assistant %}
+{% include "../../courses/templates/include/include.html" with head="ассистент" teacher=courses.assistant %}
  
 
  <div class="course_id" >
