--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,28 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pybursa contact</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-default">
-      <div class="navbar-header">
-        <a class="navbar-brand" href='#'>
-        <img class="logo-minions" alt="Logo Pretty Minions" src="{% static 'images/logo.png' %}" height="45px" style="margin-top: -10px"></a>
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="{% url 'index' %}">Main</a></li>
-          <li><a href="{% url 'contact' %}">Contacts</a></li>
-          <li><a href="{% url 'students:list_view' %}">Students</a></li>
-        </ul>
-      </div>
-    </nav>
+{% extends 'base.html' %}
+
+
+{% load staticfiles %}
+
+{% block title %}Pybursa Contact{% endblock title %}
+
+{% block nav_class_conatact %}active{% endblock %}
+
+
+{% block content %}
     <h1>Организаторы:</h1>
     <div class="column">
       <div class="col-sm-6 col-md-4">
@@ -71,7 +57,4 @@
         </div>
       </div>
     </div>
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
