--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,51 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pybursa contact</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-default">
-      <div class="navbar-header">
-        <a class="navbar-brand" href='#'>
-        <img class="logo-minions" alt="Logo Pretty Minions" src="{% static 'images/logo.png' %}" height="45px" style="margin-top: -10px"></a>
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="{% url 'index' %}">Main</a></li>
-          <li><a href="{% url 'contact' %}">Contacts</a></li>
-          <li><a href="{% url 'students:list_view' %}?course_id={{course.id}}">Students</a></li>
-        </ul>
-      </div>
-    </nav>
+{% extends 'base.html' %}
+
+
+{% block title %}Pybursa Courses detail{% endblock title %}
+
+
+{% load staticfiles %}
+
+
+{% block content %}
     <div class="col-md-10 col-md-push-1">
-      <h1>{{course}}</h1>
-      <h2>{{course.description}}</h2>
       <div class="container">
       <div class="col-md-12">
-        <h2>Преподаватели</h2>
-        {% if coach %}
-        <h3>Учитель</h3>
-        <h3><a href="{% url 'coaches:detail' coach.id %}">{{coach.fio}}</a></h3>
-        <p>{{coach.description}}</p>
-        {% endif %}
-        </div>
-      </div>
-      <div class="container">
+{% include "courses/include/inc_courses_info.html" %}
+    <div class="container">
       <div class="col-md-12">
-        {% if assistant %}
-        <h3>Ассистент</h3>
-        <h3><a href="{% url 'coaches:detail' assistant.id %}">{{assistant.fio}}</a></h3>
-        <p>{{assistant.description}}</p>
-        {% endif %}
-        </div>
+
+{% include "courses/include/inc_instructors.html" with block_title="Учитель" instructor=coach %}    
+
+
+{% include "courses/include/inc_instructors.html" with block_title="Ассистент" instructor=assistant %}    
+        
       </div>
-      <h3>План Курса</h3>
+    </div>
+  <h3>План Курса</h3>
       <div class="table-responsive">
         <table class="table" border=2>
           <thead>
@@ -67,5 +44,4 @@
         </table>
       </div>
     </div>
-  </body>
-</html>
+ {% endblock content %} 
