--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pybursa Main</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-  </head>
-  <body>
-      <nav class="navbar navbar-default">
-        <div class="navbar-header">
-            <a class="navbar-brand" href='#'>
-            <img class="logo-minions" alt="Logo Pretty Minions" src="{% static 'images/logo.png' %}" height="45px" style="margin-top: -10px"></a>
-          </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </div>
-      </nav>
-    <div class="container">
+{% extends 'base.html' %}
+
+
+{% block title %}Pybursa Main{% endblock title %}
+
+
+{% block nav_class_index %}active{% endblock %}
+
+
+{% block content %}
       <h1>Ooniversity</h1>
-    </div>
+    
     <div class="row">
       <div class="container">
         <p class="p2"><span class="great">Мы специализируемся</span> на "модных" языках программирования. <span class="great">Принципиальное наше отличие от других курсов</span> - максимум практики и жесткая система обязательных домашних заданий.
@@ -45,9 +29,9 @@
             </tr>
             {% for cour in courses %}
             <tr>
-              <td><a href="{% url 'courses:detail' cour.id %}">{{cour.name}}</a>
+              <td><a href="{% url 'courses:detail' cour.id %}">{{cour.name|upper}}</a>
               </td>
-              <td>{{cour.short_description}}
+              <td>{{cour.short_description|title}}
               </td>
             </tr>
             {% endfor %}
@@ -55,7 +39,4 @@
         </table>
       </div>
     </div>
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>  
-</html>
+{% endblock content %}
