--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,30 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Student Detail</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-default">
-      <div class="navbar-header">
-        <a class="navbar-brand" href='#'>
-          <img class="logo-minions" alt="Logo Pretty Minions" src="{% static 'images/logo.png' %}" height="45px" style="margin-top: -10px"></a>
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="{% url 'index' %}">Main</a></li>
-          <li><a href="{% url 'contact' %}">Contacts</a></li>
-          <li><a href="{% url 'students:list_view' %}">Students</a></li>
-        </ul>
-      </div>
-    </nav>
-    <div class="column">
-      <div class="container">
+{% extends 'base.html' %}
+
+
+{% block title %}Pybursa Students info{% endblock title %}
+
+
+{% block nav_class_students %}active{% endblock %}
+
+
+{% load staticfiles %}
+
+
+{% block content %}
         <div class="column">
       <div class="col-md-10 col-md-push-1">
         <h2 class="sub-header">{{student.name}} {{student.surname}}</h2>
@@ -71,7 +57,4 @@
                 </tr>
           </table>
         </div>
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>  
-</html>
+{% endblock content %}
