--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,96 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-    <title>ItBursa coach detail</title>
+{% extends "base.html" %}
+
 
 {% load staticfiles %}
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-   
-  </head>
-
-  <body>
-
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="container">
-      <h1>{{ coach.full_name }}</h1>
-      <div class="thumbnail">
-                        <table>
-                          <th>дата рождения</th>
-                          <td>{{ coach.date_of_birth }}</td>
-                        </tr>
-                        <tr>
-                          <th>адрес</th>
-                          <td>{{ coach.address }}</td>
-                        </tr>
-                        <tr>
-                          <th>почта</th>
-                          <td>{{ coach.email }}</td>
-                        </tr>
-                        <tr>
-                          <th>логин skype</th>
-                          <td>{{ coach.skype }}</td>
-                        </tr>
-                        <tr>
-                          <th>телефон</th>
-                          <td>{{ coach.phone }}</td>
-                        </tr>
-                        {% if course_coach %}
-                        <tr>
-                          <th>курсы учитель</th>
-                          <td>{% for course in coach.coach_courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> студенты курса <a href="{% url 'students:list_view'%}?course_id={{course.id}}"><span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span></a><br>{% endfor %}</td>
-                        </tr>
-                        {% endif %}
-                        {% if course_assistant %}
-                        <tr>
-                          <th>курсы ассистент</th>
-                          <td>{% for course in coach.assistant_courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> студенты курса <a href="{% url 'students:list_view'%}?course_id={{course.id}}"><span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span></a><br>{% endfor %}</td>
-                        </tr>
-                        {% endif %}
-                    </table>
-                 
-      </div>
-    </div> 
-         
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted">2015 footer</p>
-      </div>
-    </footer> 
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js'%}"></script>
-    
-  </body>
-</html>
+{% block title %}Course details{% endblock %}
+
+
+{% block content %}
+<div class="container">
+  <h1>{{ coach.full_name }}</h1>
+    <div class="thumbnail">
+      <table>
+        <th>дата рождения</th>
+        <td>{{ coach.date_of_birth|date:"j F, Y" }}</td>
+      </tr>
+      <tr>
+        <th>адрес</th>
+        <td>{{ coach.address }}</td>
+      </tr>
+        <tr>
+        <th>почта</th>
+        <td>{{ coach.email }}</td>
+      </tr>
+        <tr>
+        <th>логин skype</th>
+      <td>{{ coach.skype }}</td>
+       </tr>
+       <tr>
+        <th>телефон</th>
+        <td>{{ coach.phone }}</td>
+      </tr>
+       {% include "coaches/inc_course_instructor.html" with status="курсы учитель" courses=coach.coach_courses.all %}
+       {% include "coaches/inc_course_instructor.html" with status="курсы ассистент" courses=coach.assistant_courses.all %}
+      </table>
+  </div>
+</div>
+{% endblock content %}
