--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,70 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-    <title>Course details</title>
+{% extends "base.html" %}
+
+
 {% load staticfiles %}
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-   
-  </head>
-
-  <body>
-
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}?course_id={{course.id}}">Students</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
 
 
-    
+{% block title %}Course details{% endblock %}
+
+
+{% block content %}
     <div class="container">
-
        <div class="jumbotron">
-      
       <h1>{{ course.name }}</h1>
-      <p>{{ course.description }}</p>
-       
-
+      <p>{{ course.description|truncatechars:32 }}</p>
       <h2>Преподаватели</h2>
-    
-       <div>
-         
-            <h3>Учитель</h3>
-            <h4><a href="{% url 'coaches:detail' course.coach.id %}">{{course.coach.full_name}}</a></h4>
-            <p>{{course.coach.description}}</p>
-          
-     
-            <h3>Ассистент</h3>
-            <h4><a href="{% url 'coaches:detail' course.assistant.id %}">{{course.assistant.full_name}}</a></h4>
-            <p>{{course.assistant.description}}</p>
-           
-       </div>
-    
-    </div>
+     </div>
+     <div>
+        {% include "courses/inc_instructor.html" with status="Учитель" instructor=course.coach %}
+        {% include "courses/inc_instructor.html" with status="Ассистент" instructor=course.assistant %}
+     </div>
         <table class="table table-bordered">
           <thead>
             <tr>
@@ -85,23 +38,4 @@
         </table>
       </div>
     </div>
-    
-
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted">2015 footer</p>
-      </div>
-    </footer>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js'%}"></script>
-    
-  </body>
-</html>
-
-
-
-
+{% endblock content %}
