--- a/templates/index.html
+++ b/templates/index.html
@@ -1,51 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-    <title>ItBursa main</title>
+{% extends "base.html" %}
+
 {% load staticfiles %}
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-   
-  </head>
 
-  <body>
 
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+{% block title %}ItBursa main{% endblock %}
 
+
+{% block navbar %}
+    {% include "inc_navbar.html" with active_page='index' %}
+{% endblock navbar %}
+
+
+{% block content %}
     <div class="container">
-
        <div class="jumbotron">
         <div class="container">
           <h1>Description</h1>
         </div>
-        
         <p class="lead">description</p>
         <div class="container">
           <h1>Program</h1>
@@ -57,32 +28,16 @@
               <th>Курс</th>
               <th>описание</th>
              </tr>
-          </thead>
+           </thead>
           <tbody>
-{% for course in courses %}
+    {% for course in courses %}
             <tr>
-              <th scope="row"><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></th>
-              <td>{{course.short_description}}</td>
-{% endfor %}
+              <th scope="row"><a href="{% url 'courses:detail' course.id %}">{{ course.name|upper }}</a></th>
+              <td>{{course.short_description|title}}</td>
+    {% endfor %}
             </tr>
            </tbody>
         </table>
       </div>
-
     </div>
-    
-    
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted">2015 footer</p>
-      </div>
-    </footer>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js'%}"></script>
-    
-  </body>
-</html>
+{% endblock content %}
