--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,44 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-    <title>ItBursa student detail</title>
+{% extends "students/base.html" %}
+
 
 {% load staticfiles %}
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-   
-  </head>
 
-  <body>
 
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+{% block title %}ItBursa student detail{% endblock %}
+
+
+{% block content %}
     <div class="container">
       <h1> {{ student.surname }} {{ student.name }} </h1>
       <div class="thumbnail">
@@ -79,7 +48,6 @@
                           <th>курсы</th>
                           <td>{% for course in student.courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>{% endfor %}</td>
                         </tr>
-                        
                     </table>
                   </div>
                 </div>
@@ -88,20 +56,5 @@
           </div>
         </div>
       </div>
-    </div> 
-         
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted">2015 footer</p>
-      </div>
-    </footer> 
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js'%}"></script>
-    
-  </body>
-</html>
+    </div>
+{% endblock content %}
