--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>PyBursa main</title>
+    <title>{% block title %}{% endblock %}</title>
     {% load staticfiles %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
@@ -26,36 +26,15 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Main</a><li>
-            <li><a href="{% url 'contact' %}">Contacts</a><li>
-            <li><a href="{% url 'student_list' %}">Students</a><li>
-            <li><a href="{% url 'results' %}">Results</a><li>
+            <li class="{% block nav_main %}{% endblock %}"><a href="{% url 'index' %}">Main</a><li>
+            <li class="{% block nav_contacts %}{% endblock %}"><a href="{% url 'contact' %}">Contacts</a><li>
+            <li class="{% block nav_students %}{% endblock %}"><a href="{% url 'students:list_view' %}">Students</a><li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <div class="container">
-
-      <div class="starter-template">
-        <div class="container">
-          <h2>PyBursa</h2>
-      </div>
-      <div class="container">
-        <h3>Courses Program</h3>
-          <div class="form-group">
-            <ul>
-              <li class="list"><a class="out-link" href="https://en.wikipedia.org/wiki/Python_%28programming_language%29">Python 2.7</a></li>
-              <li class="list"><a class="out-link" href="https://git-scm.com/">Git</a></li>
-              <li class="list"><a class="out-link" href="https://en.wikipedia.org/wiki/HTML">HTML\CSS</a></li>
-              <li class="list"><a class="out-link" href="https://www.djangoproject.com/">Django</a></li>
-            </ul>
-          </div>
-          <div class="collapse">
-            <p>Text</p>
-          </div>
-    </div><!-- /.container -->
-
+    {% block content %}{% endblock %}
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
