--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,45 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Course detail</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-  </head>
+{% extends "base.html" %}
 
-  <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Main</a><li>
-            <li><a href="{% url 'contact' %}">Contacts</a><li>
-            <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Students</a><li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+{% block title %}Course detail!{% endblock %}
+
+
+{% block nav_main %}active{% endblock %}
+
+
+{% block content %}
+
+    {% include "courses/include/inc_descr.html" %}
 
     <div class="container">
 
       <div class="starter-template">
         <div class="container">
               <h2>{{ course.name }} course details</h2>
-              <h3>{{ course.description }}</h3>
+              <h3>{{ course.description|truncatechars:32 }}</h3>
               <br>
                 <h3>Coach</h3>
                  <table class="table">
@@ -83,13 +60,4 @@
 
       </div>
     </div><!-- /.container -->
-
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
