--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,40 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Студент</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-</head>
 
-<body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <img class="logo" src="{% static 'images/logpy.jpg' %}" />
-            </div>
-            <div class="container">
-                <ul class="nav navbar-nav">
-                    <li><a href="{% url 'index' %}">Главная</a>
-                    </li>
-                    <li><a href="{% url 'contact' %}">Контакты</a>
-                    </li>
-                    <li><a href="{% url 'students:list_view' %}">Студенты</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    
-    <div class="container" id="mark">
+{% load staticfiles %}
+
+
+{% block title %}Студент{% endblock title %}
+
+
+{% block nav_class_student %}active{% endblock %}
+
+
+{% block content %}
+
+{% include "courses/include/inc_BestoftheBest.html" %}
+<div class="container" id="mark">
     		{% for student in students %}
-        <h1>{{ student.name}} {{ student.surname }}</h1>
-        	
+        <h1>{{ student.name}} {{ student.surname }}</h1>      	
     </div>
     <div class="mytable">
         <table>
@@ -91,17 +72,10 @@
         </table>
           {% endfor %}
     </div>
-  
     <nav class="container">
         <ul class="pager">
             <li class="previous"><a href="{% url 'students:list_view' %}"><span aria-hidden="true">&larr;</span>Студенты</a>
             </li>
         </ul>
     </nav>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-</body>
-
-</html>
-
+{% endblock content %}
