--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,38 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Студент</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-</head>
 
-<body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <img class="logo" src="{% static 'images/logpy.jpg' %}" />
-            </div>
-            <div class="container">
-                <ul class="nav navbar-nav">
-                    <li><a href="{% url 'index' %}">Главная</a>
-                    </li>
-                    <li><a href="{% url 'contact' %}">Контакты</a>
-                    </li>
-                    <li><a href="{% url 'students:list_view' %}">Студенты</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    {% for coach in coaches %}
-    <div class="container" id="mark">
-        <h1>{{ coach.full_name }}</h1>
+{% load staticfiles %}
+
+
+{% block title %}Тренер{% endblock title %}
+
+
+{% block content %}
+<div class="container" id="mark">
+        <h1>{{ coaches.full_name }}</h1>
     </div>
     <div class="mytable">
         <table>
@@ -41,7 +18,7 @@
                     дата рождения
                 </td>
                 <td>
-                    {{ coach.date_of_birth }}
+                    {{ coaches.date_of_birth|date:'j F, Y' }}
                 </td>
             </tr>
             <tr>
@@ -49,7 +26,7 @@
                     адрес
                 </td>
                 <td>
-                    {{ coach.address }}
+                    {{ coaches.address }}
                 </td>
             </tr>
             <tr>
@@ -57,7 +34,7 @@
                     почта
                 </td>
                 <td>
-                    {{ coach.user.email }}
+                    {{ coaches.user.email }}
                 </td>
             </tr>
             <tr>
@@ -65,7 +42,7 @@
                     логин skype
                 </td>
                 <td>
-                    {{ coach.skype }}
+                    {{ coaches.skype }}
                 </td>
             </tr>
             <tr>
@@ -73,7 +50,7 @@
                     телефон
                 </td>
                 <td>
-                    {{ coach.phone }}
+                    {{ coaches.phone }}
                 </td>
             </tr>
             <tr>
@@ -100,14 +77,10 @@
             </tr>
         </table>
     </div>
-    {% endfor %}
     <nav class="container">
         <ul class="pager">
             <li class="previous"><a href="{% url 'index' %}"><span aria-hidden="true">&larr;</span>Главная</a>
             </li>
         </ul>
     </nav>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-</body>
-</html>
+{% endblock content %}
