--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,36 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Students</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-</head>
 
-<body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <img class="logo" src="{% static 'images/logpy.jpg' %}" />
-            </div>
-            <div class="container">
-                <ul class="nav navbar-nav">
-                    <li><a href="{% url 'index' %}">Главная</a>
-                    </li>
-                    <li><a href="{% url 'contact' %}">Контакты</a>
-                    </li>
-                    <li><a href="{% url 'students:list_view' %}">Студенты</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="container" id="sto">
+{% load staticfiles %}
+
+
+{% block title %}Студенты{% endblock title %}
+
+
+{% block nav_class_student %}active{% endblock %}
+
+
+{% block content %}
+
+{% include "courses/include/inc_BestoftheBest.html" %}
+<div class="container" id="sto">
         <h1><strong>Список студентов</strong></h1>
     </div>
     <table class="table table-hover">
@@ -54,10 +37,10 @@
         {% for student in students %}
         <tr>
             <td>
-                {{ student.id }}
+                {{ forloop.counter }}
             </td>
             <td>
-                <a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{ student.name}}</a>
+                <a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{ student.name }}</a>
             </td>
             <td>
                 {{ student.address }}
@@ -79,9 +62,4 @@
             </li>
         </ul>
     </nav>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-</body>
-
-</html>
-
+{% endblock content %}
