--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,5 +63,5 @@
 .logo-pbursa { width:100px;height:50px; }
 .detail_courses-logo{ float:right; margin-top:-73px; }
 .back_on_main { margin-left:-130px; }
-
+.logo-pybursa { width:100px;height:50px; }
 
