--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -17,6 +17,19 @@
     <div class="container">
       <div class="bursa">
         <h1 id="pb" class="bursa">{{ courses.name }}</h1>
+        {% if courses.name == "Python Bursa" %}
+        <div class="index-logo">
+            <img class="logo-pybursa" src="{% static 'images/pblogo.jpg' %}" alt="...">
+          </div>
+        {% elif courses.name == "Java Bursa" %}
+        <div class="index-logo">
+            <img class="logo-itbursa" src="{% static 'images/pjlogo.png' %}" alt="...">
+          </div>
+        {% elif courses.name == "Ruby on Rails" %}
+        <div class="index-logo">
+            <img class="logo-itbursa" src="{% static 'images/rlogo.jpg' %}" alt="...">
+          </div>
+        {% endif %}
         <h2 class="des">Описание курса</h2>
           <p class="descr">{{ courses.description|truncatechars:32 }}
           </p>
@@ -25,10 +38,10 @@
   </div>
 
 
-{% include "../../courses/templates/include/include.html" with head="учитель" teacher=courses.coach %}
+{% include "courses/include/inc_coaches.html" with head="учитель" teacher=courses.coach %}
 
 
-{% include "../../courses/templates/include/include.html" with head="ассистент" teacher=courses.assistant %}
+{% include "courses/include/inc_coaches.html" with head="ассистент" teacher=courses.assistant %}
  
 
  <div class="course_id" >
