--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,9 +1,9 @@
 <!--quadratic/templates/results.html-->
 <p> Квадратное уравнение a*x*x + b*x + c = 0</p>
-<br>
+
 <form>
   {{ form.as_p }}
-  <input type="Submit" value="Решить">  
+  <input type="submit" value="Решить">  
 </form>
 
 
@@ -11,16 +11,22 @@
   <p>Дискриминант: {{ discriminant }}</p>
   
   {% if discriminant < 0 %}
-    <p>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</p>
+    <p>
+      Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.
+    </p>
   
   {% else %}
-    <p>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</p>    
+    <p>
+      Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}
+    </p>    
   
   {% endif %}
 
 {% elif discriminant == 0 %}
     <p>Дискриминант: {{ discriminant }}</p>
-    <p>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}</p>    
+    <p>
+      Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}
+    </p>    
 {% endif %}
 
 
