--- a/templates/contact.html
+++ b/templates/contact.html
@@ -37,7 +37,7 @@
       <ul class="nav navbar-nav">
         <li><a href="{% url 'index' %}">Main</a></li>
         <li class="active"><a href="{% url 'contact' %}">Contacts <span class="sr-only">(current)</span></a></li>
-<li><a href="{% url 'student_list' %}">Students</a></li>
+<li><a href="{% url 'students:student_list' %}">Students</a></li>
           </ul>
         </li>
       </ul>
